<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myCoach</string>
    <string name="databaseVersion" format="integer">1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_start">myCoach</string>
    <string name="title_activity_new_project">NewProjectActivity</string>
    <string name="title_activity_project_settings">ProjectSettingsActivity</string>
    <string name="title_activity_activity_details">ActivityDetailsActivity</string>
    <string name="title_activity_new_activity">NewActivityActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_level_up">LevelUpActivity</string>
    <string name="title_activity_tips">TipsActivity</string>
    <string name="initial_message">This is the first launch.</string>
    <string name="initial_message2">Start right now by creating a new project !</string>
    <string name="mainActivity_createprojectbutton_text">Create a new project</string>
    <string name="mainActivity_social_text">Get more power by logging in using your social account !</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="twitter_login">Twitter Login</string>
    <string name="linked_in_login">Linked In Login</string>
    <string name="newProject_currentHeader">Current Status</string>
    <string name="newProject_current_numWeek">Number of activities done last week</string>
    <string name="newProject_current_avgDuration">Average duration of activities</string>
    <string name="newProject_current_goalHeader">Your Goal</string>
    <string name="newProject_goal_numAct">Number of activities per week</string>
    <string name="newProject_goal_avgDuration">Average duration per activity</string>
    <string name="newProject_submitButtonText">Save &amp; Start Planning</string>
    <string name="newProject_goal_hint">Try to set a realistic goal for yourself</string>
    <string name="newProject_minuteText">minutes</string>
    <string name="projSetting_progressHeader">Your Progress</string>
    <string name="projSetting_lbl1">"Current Level : "</string>
    <string name="projSetting_currentLevelLabel">0</string>
    <string name="projSetting_lbl2">"Goal Level : "</string>
    <string name="projSetting_goalLevelLabel">0</string>
    <string name="projSetting_lbl3">"You will need at least 0 week(s) to achieve your goal"</string>
    <string name="projSetting_lbl4">weeks to achieve your goal</string>
    <string name="projSetting_lbl5">Start now by planning for the next 3 weeks</string>
	<string name="m">M</string>
	<string name="t">T</string>
	<string name="w">W</string>
	<string name="f">F</string>
	<string name="s">S</string>
    <string name="activity">Activity</string>
    <string name="fast_walking_jogging">Fast Walking / Jogging</string>
    <string name="cycling">Cycling</string>
    <string name="soccer_basketball">Soccer / Basketball</string>
    <string name="swimming">Swimming</string>
    <string name="save_project">Save Project</string>
    <string name="main_start_activity_button">Start new activity</string>
    <string name="main_record_activity_button">Record activity</string>
    <string name="main_history_button">Full history</string>
    <string name="main_cur_level">Current level completion</string>
    <string name="main_cur_week_activities">You still need 1 activity for this week</string>
    <string name="newActivity_type">Type :</string>
    <string name="newActivity_track">Track my movements</string>
    <string name="newActivity_track_sub">This option will use you GPS to record your position</string>
    <string name="main_elapsed_time">Elapsed time:</string>
    <string name="main_ongoing_activity">Ongoing activity:</string>
    <string name="main_recording">Recording...</string>
    <string name="details_type_label">Activity: </string>
    <string name="details_date_label">Date: </string>
    <string name="details_duration_label">Duration: </string>
    <string name="details_location_label">Location: </string>
    <string name="details_calories_label">Calories: </string>
    <string name="details_continue_button">Continue</string>
    <string name="level_up_time_past"> %1$s weeks has past!</string>
    <string name="level_up_percent">You have achieved %1$s %% of your objectives.</string>
    <string name="level_up_label1">What do you want to do?</string>
    <string name="level_up_label2">Level up</string>
    <string name="level_up_label3">Level down</string>
    <string name="level_up_label4">Remain the same</string>
    <string name="levelup_btnContinue">Continue</string>
    <string name="newProject_weight_label">Your weight (kg): </string>
    <string name="newProject_about">About you</string>
    <string name="appName">myCoach</string>
    <string name="tipsSave">Save</string>

</resources>