<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LevelUpActivity" >

    <TextView
        android:id="@+id/levelup_weeksLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/level_up_time_past"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/levelup_percentLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/level_up_percent"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_up_label1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp" >

        <RadioButton
            android:id="@+id/rbtn_levelup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_up_label2" />

        <RadioButton
            android:id="@+id/rbtn_leveldown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_up_label3" />

        <RadioButton
            android:id="@+id/rbtn_same"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_up_label4" />
    </RadioGroup>

    <Button
        android:id="@+id/btnContinue_levelup"
        style="@style/flatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/levelup_btnContinue" />

</LinearLayout>