<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewProjectActivity" >

    <TextView
        android:id="@+id/levelup_percentLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/newProject_currentHeader"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/levelup_weeksLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:singleLine="true"
        android:text="@string/newProject_current_numWeek"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/newProject_numActLastWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/newProject_current_avgDuration"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/newProject_current_avgDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:hint="@string/newProject_minuteText"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/newProject_current_goalHeader"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/newProject_goal_numAct"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/newProject_goalNumAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/newProject_goal_avgDuration"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/newProject_goalAvgDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:hint="@string/newProject_minuteText"
        android:inputType="number" />
    
        <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/newProject_about"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/newProject_weight_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/newProject_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/newProject_infoSubmitButton"
        style="@style/flatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/newProject_submitButtonText" />

</LinearLayout>