<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/main_startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="50"
            android:text="@string/main_start_activity_button"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/main_recordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="50"
            android:minWidth="20dip"
            android:text="@string/main_record_activity_button"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <TextView
        android:id="@+id/main_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/main_cur_week_activities" />

    <ProgressBar
        android:id="@+id/main_weekProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill" />

    <ListView
        android:id="@+id/main_historyListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_weight="0.3" >

    </ListView>

    <Button
        android:id="@+id/main_historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/main_history_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/main_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_cur_level"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RatingBar
            android:id="@+id/main_levelStars"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="16dp"
            android:numStars="5" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/main_levelProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|bottom" />

</LinearLayout>