<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="10"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="10"
    tools:context=".NewActivityActivity" >

    <Spinner
        android:id="@+id/newActivity_activity_list"
        android:layout_column="3"
        android:layout_columnSpan="7"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:layout_rowSpan="2" />

    <CheckBox
        android:id="@+id/newActivity_track_checkbox"
        android:layout_column="0"
        android:layout_columnSpan="10"
        android:layout_gravity="left"
        android:layout_row="5"
        android:layout_rowSpan="1"
        android:text="@string/newActivity_track" />

    <TextView
        android:id="@+id/newActivity_track_text"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="left"
        android:layout_row="0"
        android:layout_rowSpan="2"
        android:text="@string/newActivity_type"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/newActivity_track_sub"
        android:layout_column="0"
        android:layout_columnSpan="10"
        android:layout_gravity="left"
        android:layout_row="6"
        android:layout_rowSpan="2"
        android:text="@string/newActivity_track_sub"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/newActivity_start_button"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_column="0"
        android:layout_columnSpan="10"
        android:layout_gravity="center"
        android:layout_row="8"
        android:layout_rowSpan="2"
        android:background="@null"
        android:scaleType="fitCenter"
        android:layout_marginRight="55dp"
        android:src="@drawable/play" />

</GridLayout>